--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "词频",
+  "name": "获取网页词频",
   "version": "1.0",
   "description": "本项目基于chrome-extensions-samples-main修改。本项目使用MIT许可。本项目是一个Chrome扩展，用来分析网站词频",
 "background": {
